// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should align vertically param|property|returns|yields|throws if option set to true, and amount of spaces is different than default 1`] = `
"/**
 * @property  {Object}          unalginedProp   Unaligned property descriptin
 * @param     {String}          unalginedParam  Unaligned param description
 * @throws    {CustomExceptio}                  Unaligned throws description
 * @yields    {Number}                          Yields description
 * @returns   {undefined}
 */
"
`;

exports[`Should align vertically param|property|returns|yields|throws if option set to true, and amount of spaces is different than default 2`] = `
"/**
 * @property    {Object}            unalginedProp     Unaligned property
 * descriptin
 *
 * @param       {String}            unalginedParam    Unaligned param
 * description
 *
 * @throws      {CustomExceptio}                      Unaligned throws
 * description
 *
 * @yields      {Number}                              Yields description
 * @returns     {String}                              Unaligned returns
 * description
 *
 */
"
`;

exports[`Should format regular jsDoc 1`] = `
"/**
 * @async
 * @private
 * @memberof test
 * @description Function example description that was wrapped by hand so it have
 * more then one line and don't end with a dot REPEATED TWO TIMES BECAUSE IT
 * WAS EASIER to copy function example description that was wrapped by hand so
 * it have more then one line.
 *
 *
 * @example
 *   var one = 5;
 *   var two = 10;
 *
 *   if (one > 2) {
 *     two += one;
 *   }
 *
 * @param {String|Number} text Some text description that is very long and needs
 * to be wrapped
 *
 * @param {String} [defaultValue=\\"defaultTest\\"] TODO
 * @param {Number|Null} [optionalNumber]
 * @returns {Boolean} Description for @returns with s
 */
const testFunction = (text, defaultValue, optionalNumber) => true;
"
`;

exports[`Should format regular jsDoc 2`] = `
"/**
 * @async
 * @private
 * @memberof test
 * @description Function example description that was wrapped by hand so it have
 * more then one line and don't end with a dot REPEATED TWO TIMES BECAUSE IT
 * WAS EASIER to copy function example description that was wrapped by hand so
 * it have more then one line.
 *
 *
 * @example
 *   var one = 5;
 *   var two = 10;
 *
 *   if (one > 2) {
 *     two += one;
 *   }
 *
 * @param {String|Number} text Some text description that is very long and needs
 * to be wrapped
 *
 * @param {String} [defaultValue=\\"defaultTest\\"] TODO
 * @param {Number|Null} [optionalNumber]
 * @returns {Boolean} Description for @returns with s
 */
const testFunction = (text, defaultValue, optionalNumber) => true;
"
`;

exports[`Should insert proper amount of spaces based on option 1`] = `
"/**
 * @param  {Object}  paramName  Param description that goes on and on and on
 * utill it will need to be wrapped
 *
 * @returns  {Number}  Return description
 */
"
`;

exports[`Should insert proper amount of spaces based on option 2`] = `
"/**
 * @param   {Object}   paramName   Param description that goes on and on and on
 * utill it will need to be wrapped
 *
 * @returns   {Number}   Return description
 */
"
`;

exports[`examples 1`] = `
"/**
 * @example
 *   {
 *     testArr: [1, 2];
 *   }
 */
"
`;

exports[`examples 2`] = `
"/**
 * @example
 *   [
 *     {
 *       foo: 1,
 *       foo: 2,
 *       foo: 9
 *     },
 *     {
 *       bar: 1,
 *       bar: 5
 *     }
 *   ];
 */
"
`;
